@@ -223,7 +223,7 @@ do_rawlog(enum log_type logtype, const char *fmt, ...)
   va_list args;
 
   va_start(args, fmt);
-  my_vsnprintf(tbuf1, sizeof tbuf1, fmt, args);
+  mush_vsnprintf(tbuf1, sizeof tbuf1, fmt, args);
   va_end(args);
 
   time(&mudtime);
@@ -267,7 +267,7 @@ do_log(enum log_type logtype, dbref player, dbref object, const char *fmt, ...)
   char unp1[BUFFER_LEN], unp2[BUFFER_LEN];
 
   va_start(args, fmt);
-  my_vsnprintf(tbuf1, sizeof tbuf1, fmt, args);
+  mush_vsnprintf(tbuf1, sizeof tbuf1, fmt, args);
   va_end(args);
 
   switch (logtype) {
